--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// Actuator
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
