feat : 활동 사진 게시글 기능 구현

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -18,6 +18,12 @@ spring:
 api:
   url: http://localhost:8080
 
+upload:
+  image:
+    location: images/
+  video:
+    location: videos/
+
 logging:
   level:
     org.hibernate.orm.jdbc.bind: trace
