feat : aws ecs 배포를 위한 docker file 및 설정 파일 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,10 @@ spring:
       max-file-size: 5MB
       max-request-size: 5MB
 
+  mvc:
+    servlet:
+      load-on-startup: 1
+
 management:
   endpoints:
     enabled-by-default: false
