--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -15,6 +15,9 @@ spring:
     open-in-view: false
     show-sql: true
 
+frontend:
+  url: http://localhost:3000
+
 api:
   url: http://localhost:8080
 
