--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 8080
+  servlet:
+    session:
+      cookie:
+        http-only: false
+        same-site: none
+        secure: true
 
 spring:
   profiles:
@@ -17,10 +23,6 @@ spring:
     multipart:
       max-file-size: 5MB
       max-request-size: 5MB
-
-  mvc:
-    servlet:
-      load-on-startup: 1
 
 management:
   endpoints:
